--- a/src/component/TopContainer/TopContent/TopContent.css
+++ b/src/component/TopContainer/TopContent/TopContent.css
@@ -22,3 +22,46 @@ position:relative;
     padding-left: 3px;
     padding-top: 20px;
   }
+
+  .topContent__container > a > button {
+    margin-top: 30px;
+    text-align: left;
+    margin-left: 5px;
+    border: none;
+    border-radius: 2px;
+    outline: none;
+  }
+
+  .topContent__downloadButton {
+    color:black;
+    background-color: yellow;
+    font-size: 14px;
+    padding: 10px 30px;
+    font-family: "Montserrat",sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+    margin-right: 20px;
+  }
+
+  .topContent__downloadButton:hover {
+    color: black;
+    background-color: white;
+    font-weight: 900;
+  }
+
+  .topContent__workButton{
+    color:white;
+    border:1px solid black !important;
+    background-color: transparent;
+    font-size: 14px;
+    padding: 9px 45px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+  .topContent__workButton:hover {
+    color: black;
+    background-color: white;
+    font-weight: 900;
+  }
