--- a/src/component/SkillContainer/SkillContainer.css
+++ b/src/component/SkillContainer/SkillContainer.css
@@ -16,13 +16,13 @@
 }
 
 .skillContainer__text > h2 {
-    font-size: 30px;  
+    font-size: 50px;  
 }
 
 .skillcontainer__image {
-    flex:0.4;
-    text-align: center;
-    margin-right: 100px;
+    flex:0.8;
+    text-align: left;
+    margin-right: 140px;
 }
 
 .skillcontainer__image > img {
