--- a/src/component/SkillContainer/SkillContainer.css
+++ b/src/component/SkillContainer/SkillContainer.css
@@ -5,6 +5,14 @@
     align-items: center;
     justify-content: center;
     margin:200px;
+    
+}
+
+.SkillContainer__head {
+    color:white;
+    padding-bottom: 40px;
+    font-size: 25px;
+    text-align: right;
 }
 
 .skillContainer__text {
@@ -13,10 +21,6 @@
     text-align: left;
     max-width: 500px;
     margin-bottom: 20px; 
-}
-
-.skillContainer__text > h2 {
-    font-size: 30px;  
 }
 
 .skillcontainer__image {
