--- a/src/component/TopContainer/TopContainer.css
+++ b/src/component/TopContainer/TopContainer.css
@@ -5,4 +5,5 @@
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
-  }
+    padding-top: 90px;
+ }
